ADD: images, svg and variable scss

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "sample template",
     "scripts": {
       "sass": "sass --style=expanded --no-source-map assets/scss/main.scss assets/css/main.css",
-      "sass:watch": "sass --style=expanded --no-source-map --watch assets/scss/main.scss assets/css/main.css"
+      "sass:watch": "sass --watch --poll --style=expanded --no-source-map assets/scss/main.scss assets/css/main.css"
     },
     "author": "Jorge Reyes",
     "license": "ISC"
